--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.1.0",
     "next": "11.0.1",
     "pg": "^8.6.0",
     "react": "17.0.2",
