--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "next": "11.0.1",
     "pg": "^8.6.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.13.2"
+  },
+  "babel": {
+    "presets": ["next/babel"],
+    "plugins": [["styled-components", { "ssr": true }]]
   }
 }
